[package]
name = "native_counter"
version = "0.1.0"
authors = ["daheige <zhuwei313@hotmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2021"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "native_counter"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.10.1"

[dependencies]
neon = "0.10.1"
